# homecom_alt

./: .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  example.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  tox.ini
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  pre-commit-update.yml  publish.yml  release-drafter.yml  test.yml
homecom_alt/: __init__.py  bacon.py  base.py  commodule.py  const.py  generic.py  icom.py  k40.py  model.py  rac.py  rrc2.py  wddw2.py
scripts/: setup-local-env.sh
tests/: __init__.py  test_bacon.py  test_init.py
